--- a/FriendsMess/FriendsMess.csproj
+++ b/FriendsMess/FriendsMess.csproj
@@ -205,10 +205,23 @@
     <Compile Include="Migrations\201801261536258_f002.Designer.cs">
       <DependentUpon>201801261536258_f002.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201801270646038_addingMembernameInDayNo.cs" />
+    <Compile Include="Migrations\201801270646038_addingMembernameInDayNo.Designer.cs">
+      <DependentUpon>201801270646038_addingMembernameInDayNo.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201801270649346_generatingDayNoCollumn.cs" />
+    <Compile Include="Migrations\201801270649346_generatingDayNoCollumn.Designer.cs">
+      <DependentUpon>201801270649346_generatingDayNoCollumn.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201801270750426_removingTotalMealFromMember.cs" />
+    <Compile Include="Migrations\201801270750426_removingTotalMealFromMember.Designer.cs">
+      <DependentUpon>201801270750426_removingTotalMealFromMember.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\DayNo.cs" />
     <Compile Include="Models\EntityConfiguration\MealConfiguration.cs" />
+    <Compile Include="Models\GreaterThanZero.cs" />
     <Compile Include="Models\IdentityModels.cs" />
     <Compile Include="Models\Meal.cs" />
     <Compile Include="Models\Member.cs" />
@@ -306,6 +319,15 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201801261536258_f002.resx">
       <DependentUpon>201801261536258_f002.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201801270646038_addingMembernameInDayNo.resx">
+      <DependentUpon>201801270646038_addingMembernameInDayNo.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201801270649346_generatingDayNoCollumn.resx">
+      <DependentUpon>201801270649346_generatingDayNoCollumn.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201801270750426_removingTotalMealFromMember.resx">
+      <DependentUpon>201801270750426_removingTotalMealFromMember.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
