--- a/FriendsMess/FriendsMess.csproj
+++ b/FriendsMess/FriendsMess.csproj
@@ -230,6 +230,14 @@
     <Compile Include="Migrations\201801301938303_foo1.Designer.cs">
       <DependentUpon>201801301938303_foo1.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201802080532497_AddingMobileNumberInMember.cs" />
+    <Compile Include="Migrations\201802080532497_AddingMobileNumberInMember.Designer.cs">
+      <DependentUpon>201802080532497_AddingMobileNumberInMember.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201802080620574_ChangingSomeColumnAttribute.cs" />
+    <Compile Include="Migrations\201802080620574_ChangingSomeColumnAttribute.Designer.cs">
+      <DependentUpon>201802080620574_ChangingSomeColumnAttribute.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\DayNo.cs" />
@@ -241,16 +249,17 @@
     <Compile Include="Models\OtherExpense.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
+    <Compile Include="ViewModels\AddDeposit.cs" />
     <Compile Include="ViewModels\HomeViewModel.cs" />
     <Compile Include="ViewModels\MealViewModel.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Content\bootstrap.css" />
     <Content Include="Content\bootstrap.min.css" />
-    <Content Include="favicon.ico" />
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
     <Content Include="Global.asax" />
     <Content Include="Content\Site.css" />
+    <Content Include="imgage.ico" />
     <Content Include="Scripts\bootstrap.js" />
     <Content Include="Scripts\bootstrap.min.js" />
     <None Include="Scripts\jquery-1.10.2.intellisense.js" />
@@ -297,6 +306,7 @@
     <Content Include="Views\Extra\Index.cshtml" />
     <Content Include="Views\Extra\OtherExpense.cshtml" />
     <Content Include="Views\Shared\_LayoutHome.cshtml" />
+    <Content Include="Views\Members\AddDeposit.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
@@ -356,6 +366,12 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201801301938303_foo1.resx">
       <DependentUpon>201801301938303_foo1.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201802080532497_AddingMobileNumberInMember.resx">
+      <DependentUpon>201802080532497_AddingMobileNumberInMember.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201802080620574_ChangingSomeColumnAttribute.resx">
+      <DependentUpon>201802080620574_ChangingSomeColumnAttribute.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
