--- a/FriendsMess/FriendsMess.csproj
+++ b/FriendsMess/FriendsMess.csproj
@@ -286,6 +286,14 @@
     <Compile Include="Migrations\201802220912552_AddingAssignedMemberInDayTable.Designer.cs">
       <DependentUpon>201802220912552_AddingAssignedMemberInDayTable.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201802261223256_AddingUserIdInMealTable.cs" />
+    <Compile Include="Migrations\201802261223256_AddingUserIdInMealTable.Designer.cs">
+      <DependentUpon>201802261223256_AddingUserIdInMealTable.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201802261234460_AddingUserIdInMealTableToNullable.cs" />
+    <Compile Include="Migrations\201802261234460_AddingUserIdInMealTableToNullable.Designer.cs">
+      <DependentUpon>201802261234460_AddingUserIdInMealTableToNullable.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\DayNo.cs" />
@@ -464,6 +472,12 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201802220912552_AddingAssignedMemberInDayTable.resx">
       <DependentUpon>201802220912552_AddingAssignedMemberInDayTable.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201802261223256_AddingUserIdInMealTable.resx">
+      <DependentUpon>201802261223256_AddingUserIdInMealTable.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201802261234460_AddingUserIdInMealTableToNullable.resx">
+      <DependentUpon>201802261234460_AddingUserIdInMealTableToNullable.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
