--- a/FriendsMess/FriendsMess.csproj
+++ b/FriendsMess/FriendsMess.csproj
@@ -428,6 +428,7 @@
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
     <Content Include="Global.asax" />
     <Content Include="Content\Site.css" />
+    <Content Include="Images\meal.jpg" />
     <Content Include="Images\robin.jpg" />
     <Content Include="imgage.ico" />
     <Content Include="Rotativa\help-wkhtmltoimage.txt" />
