--- a/FriendsMess/FriendsMess.csproj
+++ b/FriendsMess/FriendsMess.csproj
@@ -329,6 +329,7 @@
     <Compile Include="ViewModels\AddDeposit.cs" />
     <Compile Include="ViewModels\GuestUser.cs" />
     <Compile Include="ViewModels\HomeViewModel.cs" />
+    <Compile Include="ViewModels\IndexViewModel.cs" />
     <Compile Include="ViewModels\MealViewModel.cs" />
     <Compile Include="ViewModels\MemberViewModel.cs" />
   </ItemGroup>
